@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Not finding an archetype in second_arch_pass indicates a mistake in
+ archetypes file, so it's better to just exit so it gets fixed instead
+ of leading to issues later on.
+Nicolas Weeger 2009-11-16
+
 Rewrite hiscore.c module. Now the highscore file is read once when the
 server is started and written whenever it changes. Adding new entries and
 generating output for the 'hiscore command do not anymore read the
